--- a/News_Classification_Project_Flask/static/css/styles.css
+++ b/News_Classification_Project_Flask/static/css/styles.css
@@ -4,8 +4,6 @@
 :root {
   --header-height: 3rem;
   --font-semi: 600;
-  /*===== Colores =====*/
-  /*Purple 260 - Red 355 - Blue 224 - Pink 340*/
   /* HSL color mode */
   --hue-color: 224;
   --first-color: hsl(var(--hue-color), 89%, 60%);
@@ -231,14 +229,6 @@ img {
 
 
 
-/*=== Show menu ===*/
-.show {
-  right: 0;
-}
-
-
-
-
 /*===== HOME =====*/
 .home {
   position: relative;
@@ -259,21 +249,21 @@ img {
   color: var(--first-color);
 }
 
-.home__social {
+/* .home__social {
   display: flex;
   flex-direction: column;
-}
+} */
 
-.home__social-icon {
+/* .home__social-icon {
   width: max-content;
   margin-bottom: var(--mb-2);
   font-size: 1.5rem;
   color: var(--second-color);
-}
+} */
 
-.home__social-icon:hover {
+/* .home__social-icon:hover {
   color: var(--first-color);
-}
+} */
 
 .home__img {
   position: absolute;
@@ -282,13 +272,13 @@ img {
   width: 260px;
 }
 
-.home__blob {
+/* .home__blob {
   fill: var(--first-color);
 }
 
 .home__blob-img {
   width: 360px;
-}
+} */
 
 
 
@@ -348,75 +338,7 @@ img {
 
 
 
-/* ===== SKILLS =====*/
-.skills__container {
-  row-gap: 2rem;
-  text-align: center;
-}
-
-.skills__subtitle {
-  margin-bottom: var(--mb-2);
-}
-
-.skills__text {
-  margin-bottom: var(--mb-4);
-}
-
-.skills__data {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  font-weight: var(--font-semi);
-  padding: .5rem 1rem;
-  margin-bottom: var(--mb-4);
-  border-radius: .5rem;
-  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-}
-
-.skills__icon {
-  font-size: 2rem;
-  margin-right: var(--mb-2);
-  color: var(--first-color);
-}
-
-.skills__names {
-  display: flex;
-  align-items: center;
-}
-
-.skills__bar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: var(--first-color);
-  height: .25rem;
-  border-radius: .5rem;
-  z-index: var(--z-back);
-}
-
-.skills__html {
-  width: 95%;
-}
-
-.skills__css {
-  width: 85%;
-}
-.skills__js {
-  width: 65%;
-}
-.skills__ux {
-  width: 85%;
-}
-.skills__img {
-  border-radius: .5rem;
-}
-
-
-
-
-
-/* ===== WORK =====*/
+/* ===== CATOGERY =====*/
 .work__container {
   row-gap: 2rem;
 }
@@ -513,11 +435,11 @@ div .text{
   font-weight: var(--font-semi);
   padding: 2rem 0;
 }
-
+/* 
 .footer__title {
   font-size: 2rem;
   margin-bottom: var(--mb-4);
-}
+} */
 
 .footer__social {
   margin-bottom: var(--mb-4);
@@ -576,16 +498,7 @@ div .text{
   .home {
     padding: 4rem 0 2rem;
   }
-  .home__social {
-    padding-top: 0;
-    padding-bottom: 2.5rem;
-    flex-direction: row;
-    align-self: flex-end;
-  }
-  .home__social-icon {
-    margin-bottom: 0;
-    margin-right: var(--mb-4);
-  }
+  
   .home__img {
     width: 300px;
     bottom: 25%;
@@ -644,12 +557,6 @@ div .text{
   }
   .about__img img {
     width: 300px;
-  }
-  .skills__container {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
-    align-items: center;
-    text-align: initial;
   }
   .work__container {
     grid-template-columns: repeat(3, 1fr);
