--- a/News_Classification_Project_Flask/templates/home.html
+++ b/News_Classification_Project_Flask/templates/home.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Meta tag -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='img/Favicon.png') }}">
-        <!-- <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}"> -->
 
 
         <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
   
-        <!-- =====BOX ICONS===== -->
+        <!-- Box icon -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <title>News Classification</title>
     </head>
     <body>
-        <!--===== HEADER =====-->
+        <!-- Header -->
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
                     <a href="#" class="nav__logo">
                         <img src="/static/img/Favicon.png" alt="Nepali New Classification">
                         <span>Nepali News Classification</span>
-                      </a>
-                    <!-- <a href="" class="nav__logo"> Nepali News Classification</a> -->
+                    </a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -34,7 +34,6 @@
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#catogery" class="nav__link">Catogery</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-
                         
                         <li class="nav__item"><a href="{{ url_for('login') }}" class="nav__link">Login</a></li>
                     </ul>
@@ -46,24 +45,21 @@
             </nav>
         </header>
 
+
         <main class="l-main">
-            <!--===== HOME =====-->
+            <!-- Home section-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
                     <h1 class="home__title">Hey,<br><span class="home__title-color">Classify Your News</span><br>With Us</h1>
-
                     <a href="{{url_for('dashboard') }}" class="button">Click Here</a>
                 </div>
-
-    
-
-                <div class="home__img">
-                  
+                <div class="home__img">                  
                     <img src="/static/img/pic_ (3).jpg" alt="">
                 </div>
             </section>
 
-            <!--===== ABOUT =====-->
+
+            <!-- About section-->
             <section class="about section " id="about">
                 <h2 class="section-title">About Us</h2>
 
@@ -81,83 +77,17 @@
                 </div>
             </section>
 
-            <!--===== SKILLS =====-->
-            <!-- <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
-
-                <div class="skills__container bd-grid">          
-                    <div>
-                        <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
-                        <div class="skills__data">
-                            <div class="skills__names">
-                                <i class='bx bxl-html5 skills__icon'></i>
-                                <span class="skills__name">HTML5</span>
-                            </div>
-                            <div class="skills__bar skills__html">
-
-                            </div>
-                            <div>
-                                <span class="skills__percentage">95%</span>
-                            </div>
-                        </div>
-                        <div class="skills__data">
-                            <div class="skills__names">
-                                <i class='bx bxl-css3 skills__icon'></i>
-                                <span class="skills__name">CSS3</span>
-                            </div>
-                            <div class="skills__bar skills__css">
-                                
-                            </div>
-                            <div>
-                                <span class="skills__percentage">85%</span>
-                            </div>
-                        </div>
-                        <div class="skills__data">
-                            <div class="skills__names">
-                                <i class='bx bxl-javascript skills__icon' ></i>
-                                <span class="skills__name">JAVASCRIPT</span>
-                            </div>
-                            <div class="skills__bar skills__js">
-                                
-                            </div>
-                            <div>
-                                <span class="skills__percentage">65%</span>
-                            </div>
-                        </div>
-                        <div class="skills__data">
-                            <div class="skills__names">
-                                <i class='bx bxs-paint skills__icon'></i>
-                                <span class="skills__name">UX/UI</span>
-                            </div>
-                            <div class="skills__bar skills__ux">
-                                
-                            </div>
-                            <div>
-                                <span class="skills__percentage">85%</span>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div>              
-                        <img src="assets/img/work3.jpg" alt="" class="skills__img">
-                    </div>
-                </div>
-            </section> -->
-
-            <!--===== WORK =====-->
+            <!-- Catogery section-->
             <section class="catogery section" id="catogery">
                 <h2 class="section-title">Catogery</h2>
 
                 <div class="work__container bd-grid">
-
                     <a href="#" class="work__img">
                         <img src="/static/img/pic_ (20).jpg" alt="">
                         <div class="catogery_img_text">
                             <div class="text">Health</div>
                         </div>
                     </a>
-                    
                     <a href="#" class="work__img">
                         <img src="/static/img/pic_ (17).jpg" alt="">
                         <div class="catogery_img_text">
@@ -187,29 +117,42 @@
                         <div class="catogery_img_text">
                             <div class="text">Entertainment</div>
                         </div>
-                    </a>
-                    
+                    </a>                
                 </div>
+
             </section>
 
-            <!--===== CONTACT =====-->
+
+
+            <!-- Contact section-->
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
+                    <form action="" class="contact__form" >
+                        <!-- <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" placeholder="Your Message" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <!-- <input type="button" value="Enviar" class="contact__button button"> -->
-                        <button class="contact__button button">Submit</button>
+                        <button class="contact__button button">Submit</button> -->
                         
+                        <input type="text" id="name" name="name"  placeholder="Name" 
+                                      class="contact__input" required>
+                       
+                        <input type="email" id="email" name="email" placeholder="Email" 
+                                      class="contact__input" required>
+                      
+                        <textarea id="message" placeholder="Your Message" cols="0" rows="10" 
+                                      class="contact__input" name="message" required></textarea>
+
+                          <button class="contact__button button">Submit</button>
+                        <!-- <input type="submit" value="Submit" class="contact__button"> -->
+
                     </form>
                 </div>
             </section>
         </main>
 
-        <!--===== FOOTER =====-->
+        <!-- Footer section-->
         <footer class="footer">
             <div class="footer__social">
                 <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
@@ -220,11 +163,13 @@
         </footer>
 
 
-        <!--===== SCROLL REVEAL =====-->
+        <!-- Scroll Reveal-->
         <script src="https://unpkg.com/scrollreveal"></script>
 
-        <!--===== MAIN JS =====-->
+        <!-- MAIN JS -->
         <!-- <script src="assets/js/main.js"></script> -->
+
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+        
     </body>
 </html>
