--- a/News_Classification_Project_Flask/templates/home.html
+++ b/News_Classification_Project_Flask/templates/home.html
@@ -33,7 +33,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#catogery" class="nav__link">Catogery</a></li>
-                        <!-- <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li> -->
+                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                         
                         <li class="nav__item"><a href="{{ url_for('login') }}" class="nav__link">Login</a></li>
                     </ul>
@@ -125,7 +125,7 @@
 
 
             <!-- Contact section-->
-            <!-- <section class="contact section" id="contact">
+            <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
@@ -144,7 +144,7 @@
 
                     </form>
                 </div>
-            </section> -->
+            </section>
         </main>
 
         <!-- Footer section-->
